# rs-bpe

./: .gitignore  AGENTS.md  Cargo.toml  generate_deepseek.py  pyproject.toml
.github/workflows/: go_ffi_release.yml
bpe-openai/: build.rs
bpe-openai/src/: lib.rs
bpe/src/: byte_pair_encoding.rs
crates/bpe/: Cargo.toml
crates/bpe-openai/: Cargo.toml  build.rs
crates/bpe-openai/data/: deepseek_base_special.json
crates/bpe-openai/src/: lib.rs  normalizer.rs
crates/bpe/src/: bitfield.rs  byte_pair_encoding.rs  lib.rs
crates/go-bpe/: Cargo.toml  rsbpe.h
crates/go-bpe/src/: lib.rs
crates/python-bpe/: Cargo.toml
crates/python-bpe/src/: lib.rs
python/rs_bpe/: __init__.py  bpe.pyi  openai.py
scripts/: convert_tiktoken.py
src/: lib.rs
tests/: test.py  test_basic.py
