[workspace]
members = ["crates/python-bpe", "crates/bpe", "crates/bpe-openai", "crates/go-bpe"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["gweidart <gweidart@gmail.com>"]
license = "MIT"
repository = "https://github.com/gweidart/rs-bpe"

[workspace.dependencies]
aneubeck-daachorse = "1.1.1"
base64 = "0.22.1"
either = "1.15.0"
flate2 = "1.1.0"
fnv = "1.0.7"
itertools = "0.14"
lru = "0.13.0"
num_cpus = "1.16.0"
once_cell = "1.21.1"
pyo3 = "0.24.0"
rand = "0.9.0"
rayon = "1.10.0"
regex-automata = "0.4.9"
rmp-serde = "1.3.0"
serde = "1.0.219"
serde_json = "1.0.139"
tiktoken-rs = "0.6"
unicode-normalization = "0.1.24"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
strip = true
