[build-system]
requires = ["maturin>=1.8,<2.0"]
build-backend = "maturin"

# Alternative build system using setuptools_scm (comment out the above and uncomment below to use)
# [build-system]
# requires = ["maturin>=1.8,<2.0", "setuptools>=61.0.0", "wheel", "setuptools_scm[toml]>=6.0"]
# build-backend = "maturin"

[project]
name = "rs_bpe"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Rust",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Linguistic",
    "Typing :: Typed",
]
dynamic = ["version"]
description = "A ridiculously fast Python BPE (Byte Pair Encoder) implementation written in Rust"
authors = [
    {name = "gweidart", email = "gweidart@gmail.com"}
]
readme = "README.md"
license = {text = "MIT"}
keywords = [
    "byte-pair-encoding",
    "tokenization",
    "nlp",
    "rust",
    "python",
]

# URLs for the project
[project.urls]
Homepage = "https://github.com/gweidart/rs-bpe"
Repository = "https://github.com/gweidart/rs-bpe"
Documentation = "https://github.com/gweidart/rs-bpe#readme"
"Bug Tracker" = "https://github.com/gweidart/rs-bpe/issues"

[tool.maturin]
profile = "release"
bindings = "pyo3"
# Python extension module features
features = ["pyo3/extension-module"]
manifest-path = "crates/python-bpe/Cargo.toml"
# Name of the module to be built
module-name = "rs_bpe.bpe"
# Location of Python source directory
python-source = "python"
# Include type hint files and marker for distribution
include = ["python/rs_bpe/py.typed", "python/rs_bpe/*.pyi"]
# Strip debug symbols from the library to reduce size
strip = true
# Additional files to include with the source distribution
sdist-include = ["LICENSE", "README.md"]
# Optimize for python 3.8+ compatibility (abi3)
# This allows a single wheel to be compatible with multiple Python versions
python-packages = ["rs_bpe"]
# Whether to build universal2 wheels for macOS (both x86_64 and arm64)
universal2 = true

[tool.maturin.target.x86_64-apple-darwin]
# macOS deployment target SDK version
macos-deployment-target = "13.0"

# Configure linters and type checkers
[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.ruff.isort]
known-first-party = ["rs_bpe"]

[tool.pyright]
include = ["python"]
typeCheckingMode = "basic"
reportMissingImports = true
reportMissingTypeStubs = false

[dependency-groups]
dev = [
    "maturin>=1.8.3",
    "tomli>=2.2.1",
    "mypy>=1.15.0",
]

benchmark = [
    "numpy>=2.2.4",
    "matplotlib>=3.10.1",
    "scikit-learn>=1.6.1",
    "tiktoken>=0.9.0",
    "tokenizers>=0.21.0",
]

test = [
    "pytest>=8.3.5",
]
