[package]
name = "bpe"
version.workspace = true
edition.workspace = true
description = "Rediculously fast byte-pair encoding implementation."
repository.workspace = true
license.workspace = true
keywords = ["tokenizer", "algorithm", "encoding", "bpe"]
categories = ["algorithms", "data-structures", "encoding", "science"]

[lib]
crate-type = ["lib", "staticlib"]
bench = false

[features]
rand = ["dep:rand"]
tiktoken = ["dep:base64"]

[dependencies]
aneubeck-daachorse = { workspace = true }
base64 = { workspace = true, optional = true }
fnv = { workspace = true }
itertools = { workspace = true }
rand = { workspace = true, optional = true }
serde = { workspace = true, features = ["derive"] }
lru = { workspace = true }

[dev-dependencies]
bpe = { path = "." }
tiktoken-rs = { workspace = true }

[package.metadata.docs.rs]
all-features = true
